[gd_scene load_steps=8 format=2]

[ext_resource path="res://sprites/hand_step_6_left_2.png" type="Texture" id=1]
[ext_resource path="res://sprites/hand_step_6_right_1.png" type="Texture" id=2]
[ext_resource path="res://sprites/towel.png" type="Texture" id=3]
[ext_resource path="res://DryHands.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 25.7977, 40.6209 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 61.6737 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 22.7509, 38.4048 )

[node name="DryHands" type="Node2D"]
position = Vector2( 408.865, 485.319 )
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="LeftHand" type="Area2D" parent="." groups=[
"hands",
]]
position = Vector2( -150, 0 )

[node name="Sprite" type="Sprite" parent="LeftHand"]
position = Vector2( -50.9696, -4.43214 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftHand"]
shape = SubResource( 2 )

[node name="Towel" type="Area2D" parent="."]

[node name="Sprite" type="Sprite" parent="Towel"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Towel"]
shape = SubResource( 1 )

[node name="RightHand" type="Area2D" parent="." groups=[
"hands",
]]
position = Vector2( 150, 0 )

[node name="Sprite" type="Sprite" parent="RightHand"]
position = Vector2( 60.9419, -4.43214 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightHand"]
shape = SubResource( 3 )
[connection signal="area_entered" from="Towel" to="." method="_on_Towel_area_entered"]
